# ENSC_351_work

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  as1-capture.txt  as2.tgz  cmake_install.cmake  joystick.c  joystick.h  led.c  noworky.c  reaction_timer.c  reaction_timer.h
Assignment_1/: CMakeLists.txt  as1-capture.txt
Assignment_1/app/: CMakeLists.txt
Assignment_1/app/include/: reaction_timer.h
Assignment_1/app/src/: reaction_timer.c
Assignment_1/hal/: CMakeLists.txt
Assignment_1/hal/include/: joystick.h  led.h  timing.h
Assignment_1/hal/src/: joystick.c  led.c  timing.c
Assignment_2/: README.md
Assignment_2/app/include/: badmath.h
Assignment_2/hal/include/: button.h
Assignment_2/hal/src/: button.c
Assignment_2/light_sampler/app/src/: main.c
Assignment_2/light_sampler/hal/include/hal/: encoder.h  sensor.h
Assignment_2/light_sampler/hal/src/: sensor.c
Assignment_3/: .gitignore  CMakeLists.txt  README.md  aarch64-toolchain.cmake  beatbox.h  build.sh  oldbb.c
Assignment_3/app/: CMakeLists.txt
Assignment_3/app/include/: beatbox.h  periodTimer.h
Assignment_3/app/src/: beatbox.c  main.c
Assignment_3/as3-server/lib/: beatbox_server.js
Assignment_3/as3-server/public/javascripts/: beatbox_ui.js
Assignment_3/as3/app/src/: beatbox.c
Assignment_3/as3/audio/: Makefile  audioMixer.c
Assignment_3/as3/hal/: CMakeLists.txt  encoder.c  encoder.h  joystick.c
Assignment_3/audio/: CMakeLists.txt
Assignment_3/audio/include/: audioMixer.h
Assignment_3/audio/src/: audioMixer.c
Assignment_3/hal/: CMakeLists.txt
Assignment_3/hal/as3-server/lib/: beatbox_server.js
Assignment_3/hal/include/hal/: accelerometer.h  encoder.h  joystick.h
Assignment_3/hal/src/: accelerometer.c  encoder.c  joystick.c
app/: Makefile  cmake_install.cmake  reaction_timer  reaction_timer.c
app/include/: reaction_timer.h
app/src/: reaction_timer.c
hal/: Makefile  cmake_install.cmake
hal/include/: joystick.h  led.h  timing.h
hal/src/: joystick.c  joystick.h  led.c  timing.c
light_sampler/: .gitignore  CMakeLists.txt  README.md  aarch64-toolchain.cmake  history.txt  noworky.c
light_sampler/app/: CMakeLists.txt
light_sampler/app/include/: noworky.h  periodTimer.h
light_sampler/app/src/: UDP.c  main.c  noworky.c  periodTimer.c
light_sampler/hal/: CMakeLists.txt
light_sampler/hal/include/hal/: UDP.h  encoder.h  help.h  led.h  periodTimer.h  sampler.h  sensor.h  timing.h
light_sampler/hal/src/: UDP.c  encoder.c  help.c  led.c  periodTimer.c  sampler.c  sensor.c  timing.c
